# molecule-detection

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
chemvision/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CI-CHECKLIST.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  ci-check.sh  commitlint.config.js  run-tests.sh
chemvision/.github/: CI.md  dependabot.yml
chemvision/.github/workflows/: ci.yml  security.yml
chemvision/ADRs/: 0001-architecture.md  0002-frontend-stack-choice.md  0003-backend-api-shape.md  0004-testing-strategy.md
chemvision/backend/: Dockerfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
chemvision/backend/app/: __init__.py  main.py
chemvision/backend/app/core/: config.py
chemvision/backend/app/models/: __init__.py  schemas.py
chemvision/backend/app/routers/: convert.py
chemvision/backend/app/services/: naming.py  ocsr.py
chemvision/backend/app/tests/: __init__.py  conftest.py  test_config.py  test_convert_endpoints.py  test_exception_handler.py  test_health.py  test_naming_service.py  test_ocsr_service.py
chemvision/docs/: GAP_ANALYSIS.md
chemvision/frontend/: .eslintrc.cjs  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.config.ts
chemvision/frontend/app/: layout.tsx  page.tsx
chemvision/frontend/components/forms/: ImageToStructureForm.tsx  NameToStructureForm.tsx  StructureToNameForm.tsx
chemvision/frontend/components/results/: ResultCard.tsx
chemvision/frontend/components/ui/: button.tsx  card.tsx  label.tsx  tabs.tsx  textarea.tsx
chemvision/frontend/lib/: api.ts  utils.ts
chemvision/frontend/tests/: page.test.tsx
chemvision/frontend/tests/components/: ImageToStructureForm.test.tsx  NameToStructureForm.test.tsx  ResultCard.test.tsx  StructureToNameForm.test.tsx
chemvision/ml/naming/: README.md
chemvision/ml/ocsr/: README.md
chemvision/ops/: docker-compose.yml
structure2name/: pom.xml
structure2name/src/main/java/org/mystic/: StructureToNameHelpers.java
structure2name/src/test/java/org/mystic/: SimpleTest.java
